add backup link for faulty embeds

--- a/trumpets.html
+++ b/trumpets.html
@@ -22,10 +22,12 @@
       <div class='tpt-container'>
         <div class='project'>
           <p><strong>Phantom Brass</strong> (CalArts Chamber Music, December 3, 2018)</p>
+          <p>If this video does not load (UStream embeds don't seem to work properly with the pushed site), click <a href='http://www.ustream.tv/recorded/118521413'>here.</a></p>
           <iframe width="560" height="315" src="http://www.ustream.tv/embed/recorded/118521413?html5ui" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
         </div>
         <div class='project'>
           <p><strong>Megan DeJarnett</strong> (<em>YOUR MOUSE GOD IS DEAD</em>, March 3, 2018)</p>
+          <p>If this video does not load, click <a href='http://www.ustream.tv/recorded/113356652'>here.</a></p>
           <iframe width="560" height="315" src="http://www.ustream.tv/embed/recorded/113356652?html5ui" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
         </div>
         <div class='project'>
