swapped ustream embeds for other embeds

--- a/trumpets.html
+++ b/trumpets.html
@@ -22,13 +22,13 @@
       <div class='tpt-container'>
         <div class='project'>
           <p><strong>Phantom Brass</strong> (CalArts Chamber Music, December 3, 2018)</p>
-          <p>If this video does not load (UStream embeds don't seem to work properly with the pushed site), click <a href='http://www.ustream.tv/recorded/118521413'>here.</a></p>
-          <iframe width="560" height="315" src="http://www.ustream.tv/embed/recorded/118521413?html5ui" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
+          <p>To see Phantom's most recent performance (starting at about 35'), click <a href='http://www.ustream.tv/recorded/118521413'>here.</a></p>
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/536937912&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
         </div>
         <div class='project'>
           <p><strong>Megan DeJarnett</strong> (<em>YOUR MOUSE GOD IS DEAD</em>, March 3, 2018)</p>
-          <p>If this video does not load, click <a href='http://www.ustream.tv/recorded/113356652'>here.</a></p>
-          <iframe width="560" height="315" src="http://www.ustream.tv/embed/recorded/113356652?html5ui" scrolling="no" allowfullscreen webkitallowfullscreen frameborder="0" style="border: 0 none transparent;"></iframe>
+          <p>For more work from this performance, click <a href='http://www.ustream.tv/recorded/113356652'>here.</a></p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/LMWbwIONFxM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class='project'>
           <p><em><strong>Letters from the Aftermath</strong></em> (2016-  )</p>
